@@ -1,5 +1,6 @@
 echo 'export JAVA_HOME=$(/usr/libexec/java_home -v 1.8)' >> ~/.bash_profile
 echo 'export SCALA_HOME="/usr/local/opt/scala/idea"' >> ~/.bash_profile
+echo 'export SBT_OPTS="-XX:+CMSClassUnloadingEnabled -XX:MaxPermSize=512M"' >> ~/.bash_profile
 echo 'export HOMEBREW_GITHUB_API_TOKEN="{homebrew access token}"' >> ~/.bash_profile
 echo 'export PATH="/usr/local/sbin:$PATH"' >> ~/.bash_profile
 echo 'export CLICOLOR=1' >> ~/.bash_profile
